# UDPServerClient

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/UDPClient/: CMakeLists.txt  client.cpp  client.h  locked_queue.h  main.cpp
src/UDPServer/: CMakeLists.txt  main.cpp  server.cpp  server.h
