cmake_minimum_required(VERSION 2.8)

PROJECT(UDPClient C CXX)

SET(CMAKE_AUTOMOC TRUE)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME OFF)

FIND_PACKAGE(Boost REQUIRED COMPONENTS iostreams thread system serialization regex)

IF(Boost_FOUND)
	INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS})
	
	SET(UDPClient_SOURCES main.cpp client.cpp)

	ADD_EXECUTABLE( UDPClient 
		${UDPClient_SOURCES} 
	)

	TARGET_LINK_LIBRARIES(UDPClient ${Boost_LIBRARIES} pthread)
	
	INSTALL(TARGETS UDPClient RUNTIME DESTINATION /bin)
ENDIF()