cmake_minimum_required(VERSION 2.8)

PROJECT(UDPServer C CXX)

SET(CMAKE_AUTOMOC TRUE)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME OFF)

ADD_DEFINITIONS( -std=c++11 )

FIND_PACKAGE(Boost REQUIRED COMPONENTS iostreams thread system serialization regex)
FIND_PACKAGE(Qt4 REQUIRED COMPONENTS QtCore QtDBus)

IF(Boost_FOUND)
	INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS})
	INCLUDE(${QT_USE_FILE})
	ADD_DEFINITIONS(${QT_DEFINITIONS})
	
	SET(UDPServer_SOURCES main.cpp server.cpp)

	ADD_EXECUTABLE( UDPServer 
		${UDPServer_SOURCES} 
	)

	TARGET_LINK_LIBRARIES(UDPServer ${Boost_LIBRARIES} pthread)
	TARGET_LINK_LIBRARIES(UDPServer ${QT_LIBRARIES} pthread)
	
	INSTALL(TARGETS UDPServer RUNTIME DESTINATION /bin)
ENDIF()